# SpoolWizard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  TODO.md  Taskfile.yml  pyproject.toml
SpoolWizard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: faq.md  installation.md  roadmap.md  usage.md
extras/: README.txt  spoolwizard.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_spoolwizard/: __init__.py
octoprint_spoolwizard/static/css/: spoolwizard.css
octoprint_spoolwizard/static/js/: spoolwizard.js
octoprint_spoolwizard/templates/: spoolwizard_sidebar.jinja2  spoolwizard_tab.jinja2
translations/: README.txt
