[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpoolWizard"
description = "A modern filament management plugin for OctoPrint featuring inventory, spool tracking, cost calculations, and smart spool support"
authors = [
    {name = "Will A", email = "wpallender@icloud.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = [
    "license", "version"
]

requires-python = ">=3.7, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_spoolwizard",
    "octoprint_spoolwizard.*"
]

[tool.setuptools.dynamic]
version = {attr = "octoprint_spoolwizard.__version__"}

[project.entry-points."octoprint.plugin"]
spoolwizard = "octoprint_spoolwizard"

[project.urls]
Homepage = "https://github.com/wpallender/SpoolWizard"

[project.optional-dependencies]
develop = [
    "go-task-bin"
]
